--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,28 +35,28 @@
   --sidebar-accent: 240 4.8% 95.9%;
   --sidebar-accent-foreground: 240 5.9% 10%;
   --sidebar-border: 220 13% 91%;
-  --sidebar-ring: 240 5% 64.9%
+  --sidebar-ring: 240 5% 64.9%;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: hsl(240 10% 3.9%);
-    --foreground: 0 0% 98%;
+    --background: hsl(0, 0%, 10%);
+    --foreground: hsl(0, 0%, 98%);
     --card: hsl(240 10% 3.9%);
-    --card-foreground:hsl( 0 0% 98%);
-    --popover:hsl( 240 10% 3.9%);
-    --popover-foreground:hsl( 0 0% 98%);
-    --primary:hsl( 0 0% 98%);
-    --primary-foreground:hsl( 240 5.9% 10%);
-    --secondary:hsl( 240 3.7% 15.9%);
-    --secondary-foreground:hsl( 0 0% 98%);
-    --muted:hsl( 240 3.7% 15.9%);
-    --muted-foreground:hsl( 240 5% 64.9%);
-    --accent:hsl( 240 3.7% 15.9%);
-    --accent-foreground:hsl( 0 0% 98%);
+    --card-foreground: hsl(0 0% 98%);
+    --popover: hsl(240 10% 3.9%);
+    --popover-foreground: hsl(0 0% 98%);
+    --primary: hsl(0 0% 98%);
+    --primary-foreground: hsl(240 5.9% 10%);
+    --secondary: hsl(240 3.7% 15.9%);
+    --secondary-foreground: hsl(0 0% 98%);
+    --muted: hsl(240 3.7% 15.9%);
+    --muted-foreground: hsl(240 5% 64.9%);
+    --accent: hsl(240 3.7% 15.9%);
+    --accent-foreground: hsl(0 0% 98%);
     --success: hsl(120 58.8% 40.6%);
-    --destructive:hsl( 0 62.8% 30.6%);
-    --destructive-foreground:hsl( 0 85.7% 97.3%);
+    --destructive: hsl(0 62.8% 30.6%);
+    --destructive-foreground: hsl(0 85.7% 97.3%);
     --border: hsl(240 3.7% 15.9%);
     --input: 240 3.7% 15.9%;
     --ring: 240 4.9% 83.9%;
