--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,6 +105,16 @@ body {
   }
 }
 
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
+
 /* @layer base {
   * {
     @apply border-border;
