feat: add the map with the relocate feature.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -123,3 +123,11 @@ body {
     @apply bg-background text-foreground;
   }
 } */
+
+.maplibregl-popup .maplibregl-popup-content{
+  @apply p-4 rounded-md;
+}
+
+.maplibregl-popup .maplibregl-popup-close-button{
+  @apply text-gray-600 right-3 hover:bg-none;
+}
